java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint3-hints.pass
Add import for java.util.ArrayList
